Exemplos de um único estudante

--- a/grafo_caminhos_temporal/grafo_caminho_temporal.ipynb
+++ b/grafo_caminhos_temporal/grafo_caminho_temporal.ipynb
@@ -92,7 +92,7 @@
    "source": [
     "j_init = 0\n",
     "student = \"\"\n",
-    "for i in range(len(hist)-1):\n",
+    "for i in range(len(hist)):\n",
     "    course = hist[i][\"CODIGO\"]\n",
     "    year = int(hist[i][\"ANO\"])\n",
     "    semester = int(hist[i][\"PERIODO\"])\n",
