Contador de disciplinas feitas em cada comunidade

--- a/exploracao_dados/ExploringData.ipynb
+++ b/exploracao_dados/ExploringData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 4,
    "id": "29da1f5a-d39b-4291-94dd-5f20641fe179",
    "metadata": {},
    "outputs": [
@@ -14,7 +14,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,8 +29,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "912311d0-c565-450c-a5a2-d807a80768e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ID_ANONIMO', 'CR', 'PERIODO', 'INGRESSO', 'CODIGO', 'ANO', 'PERIODO.1',\n",
+       "       'NOTA', 'CH', 'SITUACAOALUNO'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados_desistentes_path = 'input/dados_desistentes.csv'\n",
+    "dados_desistentes = pd.read_csv(dados_desistentes_path, delimiter=';')\n",
+    "dados_desistentes.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8bd8cf70-bb88-4325-814a-0a36fc30bf16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ID_ANONIMO', 'CR', 'PERIODO', 'INGRESSO', 'CODIGO', 'ANO', 'PERIODO.1',\n",
+       "       'NOTA', 'CH', 'SITUACAOALUNO'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados_regulares_path = 'input/dados_regulares.csv'\n",
+    "dados_regulares = pd.read_csv(dados_regulares_path, delimiter=';')\n",
+    "dados_regulares.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "eae97632-27c5-4394-8baf-5ca648e898ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ID_ANONIMO', 'CR', 'PERIODO', 'INGRESSO', 'CODIGO', 'ANO', 'PERIODO.1',\n",
+       "       'NOTA', 'CH', 'SITUACAOALUNO'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados_trancados_path = 'input/dados_trancados.csv'\n",
+    "dados_trancados = pd.read_csv(dados_trancados_path, delimiter=';')\n",
+    "dados_trancados.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1b5406fb-76ee-4123-9ff8-e11165ef8587",
    "metadata": {},
    "outputs": [
     {
@@ -47,88 +122,13 @@
     }
    ],
    "source": [
-    "dados_desistentes_path = 'input/dados_desistentes.csv'\n",
-    "dados_desistentes = pd.read_csv(dados_desistentes_path, delimiter=';')\n",
-    "dados_desistentes.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "8bd8cf70-bb88-4325-814a-0a36fc30bf16",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['ID_ANONIMO', 'CR', 'PERIODO', 'INGRESSO', 'CODIGO', 'ANO', 'PERIODO.1',\n",
-       "       'NOTA', 'CH', 'SITUACAOALUNO'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dados_regulares_path = 'input/dados_regulares.csv'\n",
-    "dados_regulares = pd.read_csv(dados_regulares_path, delimiter=';')\n",
-    "dados_regulares.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "eae97632-27c5-4394-8baf-5ca648e898ff",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['ID_ANONIMO', 'CR', 'PERIODO', 'INGRESSO', 'CODIGO', 'ANO', 'PERIODO.1',\n",
-       "       'NOTA', 'CH', 'SITUACAOALUNO'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dados_trancados_path = 'input/dados_trancados.csv'\n",
-    "dados_trancados = pd.read_csv(dados_trancados_path, delimiter=';')\n",
-    "dados_trancados.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "1b5406fb-76ee-4123-9ff8-e11165ef8587",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['ID_ANONIMO', 'CR', 'PERIODO', 'INGRESSO', 'CODIGO', 'ANO', 'PERIODO.1',\n",
-       "       'NOTA', 'CH', 'SITUACAOALUNO'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "todos_dados = pd.concat([dados_formados, dados_desistentes, dados_regulares, dados_trancados])\n",
     "todos_dados.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "08214403-89f0-46c6-92db-435a82d05154",
    "metadata": {},
    "outputs": [
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "132e3a5b-ca12-4718-9a06-7207c7f6fe67",
    "metadata": {},
    "outputs": [
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "id": "ee51b89c-5af4-4444-9d87-6e798bb62c5a",
    "metadata": {},
    "outputs": [
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 27,
    "id": "2bdbb90a-b818-4d07-907b-8af882fa9f2d",
    "metadata": {},
    "outputs": [],
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 28,
    "id": "dc3d2dc6-07f9-416b-8f3b-00e67af12dea",
    "metadata": {},
    "outputs": [
@@ -1192,7 +1192,7 @@
        " 'QB74I']"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 29,
    "id": "306e5c72-e8e6-4954-99f3-d8caf078ccc4",
    "metadata": {},
    "outputs": [],
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 30,
    "id": "dde9b843-e66f-4196-bb97-5da960746cfd",
    "metadata": {},
    "outputs": [
@@ -1254,67 +1254,67 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>13236</td>\n",
-       "      <td>0,6826</td>\n",
+       "      <th>2904</th>\n",
+       "      <td>90729</td>\n",
+       "      <td>0,7686</td>\n",
        "      <td>10</td>\n",
-       "      <td>12/07/07</td>\n",
-       "      <td>EL6CA</td>\n",
-       "      <td>2014</td>\n",
+       "      <td>03/08/15</td>\n",
+       "      <td>CSM41</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6,3</td>\n",
+       "      <td>60</td>\n",
+       "      <td>Formado</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2927</th>\n",
+       "      <td>90729</td>\n",
+       "      <td>0,7686</td>\n",
+       "      <td>10</td>\n",
+       "      <td>03/08/15</td>\n",
+       "      <td>CSH43</td>\n",
+       "      <td>2018</td>\n",
        "      <td>2</td>\n",
        "      <td>6,5</td>\n",
        "      <td>60</td>\n",
        "      <td>Formado</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>13236</td>\n",
-       "      <td>0,6826</td>\n",
+       "      <th>2928</th>\n",
+       "      <td>90729</td>\n",
+       "      <td>0,7686</td>\n",
        "      <td>10</td>\n",
-       "      <td>12/07/07</td>\n",
-       "      <td>MA70C</td>\n",
-       "      <td>2012</td>\n",
+       "      <td>03/08/15</td>\n",
+       "      <td>EL64B</td>\n",
+       "      <td>2017</td>\n",
        "      <td>2</td>\n",
-       "      <td>8,6</td>\n",
+       "      <td>7,2</td>\n",
        "      <td>60</td>\n",
        "      <td>Formado</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>332</th>\n",
-       "      <td>51624</td>\n",
-       "      <td>0,6161</td>\n",
+       "      <th>2930</th>\n",
+       "      <td>90729</td>\n",
+       "      <td>0,7686</td>\n",
        "      <td>10</td>\n",
-       "      <td>03/08/09</td>\n",
-       "      <td>CSH30</td>\n",
+       "      <td>03/08/15</td>\n",
+       "      <td>MA70C</td>\n",
        "      <td>2017</td>\n",
        "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>45</td>\n",
+       "      <td>7,8</td>\n",
+       "      <td>60</td>\n",
        "      <td>Formado</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>336</th>\n",
-       "      <td>51624</td>\n",
-       "      <td>0,6161</td>\n",
+       "      <th>2966</th>\n",
+       "      <td>90729</td>\n",
+       "      <td>0,7686</td>\n",
        "      <td>10</td>\n",
-       "      <td>03/08/09</td>\n",
-       "      <td>CSI52</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
-       "      <td>45</td>\n",
-       "      <td>Formado</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>349</th>\n",
-       "      <td>51624</td>\n",
-       "      <td>0,6161</td>\n",
+       "      <td>03/08/15</td>\n",
+       "      <td>CSM43</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
        "      <td>10</td>\n",
-       "      <td>03/08/09</td>\n",
-       "      <td>EL64B</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6,3</td>\n",
        "      <td>60</td>\n",
        "      <td>Formado</td>\n",
        "    </tr>\n",
@@ -1398,16 +1398,16 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>947 rows × 10 columns</p>\n",
+       "<p>584 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "       ID_ANONIMO      CR  PERIODO  INGRESSO CODIGO   ANO  PERIODO.1 NOTA  CH  \\\n",
-       "26          13236  0,6826       10  12/07/07  EL6CA  2014          2  6,5  60   \n",
-       "65          13236  0,6826       10  12/07/07  MA70C  2012          2  8,6  60   \n",
-       "332         51624  0,6161       10  03/08/09  CSH30  2017          2    6  45   \n",
-       "336         51624  0,6161       10  03/08/09  CSI52  2017          2    6  45   \n",
-       "349         51624  0,6161       10  03/08/09  EL64B  2017          2  6,3  60   \n",
+       "2904        90729  0,7686       10  03/08/15  CSM41  2019          1  6,3  60   \n",
+       "2927        90729  0,7686       10  03/08/15  CSH43  2018          2  6,5  60   \n",
+       "2928        90729  0,7686       10  03/08/15  EL64B  2017          2  7,2  60   \n",
+       "2930        90729  0,7686       10  03/08/15  MA70C  2017          2  7,8  60   \n",
+       "2966        90729  0,7686       10  03/08/15  CSM43  2019          1   10  60   \n",
        "...           ...     ...      ...       ...    ...   ...        ...  ...  ..   \n",
        "30038      198543  0,8622       10  07/08/17  CSH30  2021          2  9,3  45   \n",
        "30051      198543  0,8622       10  07/08/17  DI84D  2022          1   10  75   \n",
@@ -1416,11 +1416,11 @@
        "30118      202261  0,9013       10  05/03/18  CSI53  2022          1   10  45   \n",
        "\n",
        "      SITUACAOALUNO  \n",
-       "26          Formado  \n",
-       "65          Formado  \n",
-       "332         Formado  \n",
-       "336         Formado  \n",
-       "349         Formado  \n",
+       "2904        Formado  \n",
+       "2927        Formado  \n",
+       "2928        Formado  \n",
+       "2930        Formado  \n",
+       "2966        Formado  \n",
        "...             ...  \n",
        "30038       Formado  \n",
        "30051       Formado  \n",
@@ -1428,10 +1428,10 @@
        "30107       Formado  \n",
        "30118       Formado  \n",
        "\n",
-       "[947 rows x 10 columns]"
+       "[584 rows x 10 columns]"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 35,
    "id": "0e44a66d-b984-4664-9648-77d10a8dd564",
    "metadata": {},
    "outputs": [],
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 36,
    "id": "0c34f84a-180a-461a-b84f-f1bf4a983f3e",
    "metadata": {},
    "outputs": [
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 37,
    "id": "1b2a8911-0caf-4a5e-850d-a3e5ef7eacfb",
    "metadata": {},
    "outputs": [],
@@ -1534,11 +1534,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "90b99434-ed3b-4126-a2d2-3c1871cc23f8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CODIGO\n",
+      "CSH30     61\n",
+      "CSV30     35\n",
+      "CSH42     33\n",
+      "CSI53     18\n",
+      "CSV40     15\n",
+      "CSR44     14\n",
+      "CSR41     14\n",
+      "CSR42     13\n",
+      "MA70C     12\n",
+      "CSB51     11\n",
+      "ED70T     11\n",
+      "CSB41     10\n",
+      "CSI41     10\n",
+      "DI84D     10\n",
+      "CSV45     10\n",
+      "CSR43      9\n",
+      "CSM44      9\n",
+      "CSM41      9\n",
+      "CSM43      9\n",
+      "ES70J      8\n",
+      "ES70B      8\n",
+      "CSM40      7\n",
+      "CSB53      7\n",
+      "ES70N      6\n",
+      "GE70F      6\n",
+      "CSA44      6\n",
+      "CSB54      5\n",
+      "CSH44      5\n",
+      "EEY41      4\n",
+      "ED70U      4\n",
+      "CSH43      4\n",
+      "CSE40      4\n",
+      "CSM30      4\n",
+      "CSI56      4\n",
+      "CSA45      3\n",
+      "FI70B      3\n",
+      "FI70D      3\n",
+      "CSA42      3\n",
+      "EL64B      2\n",
+      "CSV52      2\n",
+      "CSB52      2\n",
+      "CSD41      2\n",
+      "FI70A      2\n",
+      "CSD40      2\n",
+      "CSR53      2\n",
+      "CSG42      2\n",
+      "CSI58      2\n",
+      "CSI57      1\n",
+      "CSG48      1\n",
+      "CSV41      1\n",
+      "CSI51      1\n",
+      "CSW45      1\n",
+      "CSE43      1\n",
+      "CSI55      1\n",
+      "FCH7HB     1\n",
+      "CSR47      1\n",
+      "EEY44      1\n",
+      "CSH45      1\n",
+      "CSA41      1\n",
+      "EEC41      1\n",
+      "EL6CB      1\n",
+      "EEY43      1\n",
+      "CSR48      1\n",
+      "EEY42      1\n",
+      "EL6AE      1\n",
+      "CSH41      1\n",
+      "CSD52      1\n",
+      "EEY51      1\n",
+      "EEL51      1\n",
+      "CSI54      1\n",
+      "CSA43      1\n",
+      "CSW47      1\n",
+      "CSI31      1\n",
+      "IF6BV      1\n",
+      "CSR45      1\n",
+      "CSG44      1\n",
+      "FI70E      1\n",
+      "EL75H      1\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(veses_cursada.to_string())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "f22deb7f-0fe0-4953-81d7-010a87e5b4b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['CSV45', 'CSV30', 'CSM30', 'CSE40', 'EEY41', 'CSH30']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#([x for x in dados_formados if x['ID_ANONIMO'] == '118844'])\n",
+    "dados_aluno = [x for x in todos_dados.values if x[0] == 123676]\n",
+    "print([x[4] for x in dados_aluno if x[4] in disciplinas])"
+   ]
   }
  ],
  "metadata": {
