EMais algumas tentativas de recomendação

--- a/exploracao_dados/FiltragemColaborativaUsuario_Final.ipynb
+++ b/exploracao_dados/FiltragemColaborativaUsuario_Final.ipynb
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "688b9d81",
    "metadata": {
     "scrolled": true
@@ -460,19 +460,27 @@
    "id": "f09a4eec",
    "metadata": {},
    "source": [
-    "# Testes"
+    "# Testes\n",
+    "\n",
+    "### Recall@K\n",
+    "\n",
+    "Recall@K = number of relevant items in the top K / total number of relevant items\n",
+    "\n",
+    "### Precision@K\n",
+    "\n",
+    "Precision@K = number of relevant items in the top K / K"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "a75daeda",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "train, test = train_test_split(dados[\"formados\"][\"ID_ANONIMO\"].unique(), test_size=0.2)\n",
+    "train, test = train_test_split(dados[\"formados\"][\"ID_ANONIMO\"].unique(), test_size=0.3)\n",
     "\n",
     "dados.update(train = dados[\"todos\"].loc[dados[\"todos\"]['ID_ANONIMO'].isin(train)], \n",
     "             test = dados[\"todos\"].loc[dados[\"todos\"]['ID_ANONIMO'].isin(test)])"
@@ -480,118 +488,248 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "id": "e118572e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tqdm import tqdm\n",
+    "\n",
     "# Para cada usuario em test, vemos quantas disciplinas que ele cursou estão entre as 10 mais sugeridas. \n",
     "# No fim, tiramos a média por usuário.\n",
     "\n",
-    "def teste_sugestao(dados_train = dados[\"train\"], dados_test = dados[\"test\"], cache = None):\n",
+    "def teste_sugestao(dados_train = dados[\"train\"], dados_test = dados[\"test\"], cache = None, K = 10, centralize_cosine = True, reduce_popularity_weight = True):\n",
     "    cache = create_cache_user_arrays(pd.concat([dados[\"train\"], dados[\"test\"]]), centralize_cosine = True)\n",
     "    \n",
-    "    media = 0\n",
-    "    maximo = 0\n",
-    "    minimo = 0\n",
+    "    media_p = 0\n",
+    "    maximo_p = 0\n",
+    "    minimo_p = 9999\n",
+    "    res_p = 0\n",
+    "\n",
+    "    media_r = 0\n",
+    "    maximo_r = 0\n",
+    "    minimo_r = 9999\n",
+    "    res_r = 0\n",
     "    \n",
-    "    for user in dados_test[\"ID_ANONIMO\"].unique():\n",
-    "        sugestoes = user_based_suggestions(202266, data_rec = dados_train, include_user_interests = True, cache=cache)\n",
-    "        print([x[0] in get_all_data_from_student(user, dados_test)[\"CODIGO\"].unique() for x in sugestoes[:10]])\n",
+    "    n_users = 0\n",
+    "\n",
+    "    data = dados_test[\"ID_ANONIMO\"].unique()\n",
+    "\n",
+    "    for i in tqdm(range(len(data))):\n",
+    "        user = data[i]\n",
+    "\n",
+    "        user_data = get_all_data_from_student(user, dados_test)\n",
+    "\n",
+    "        user_data_filtered = user_data[[x[2] < 8 for x in user_data.values]]\n",
+    "\n",
+    "        sugestoes = user_based_suggestions(202266, data_rec = dados_train, data_user=user_data_filtered, include_user_interests = True, cache=cache, \n",
+    "                                           centralize_cosine = centralize_cosine, reduce_popularity_weight=reduce_popularity_weight)\n",
+    "        if(len(user_data[user_data.CODIGO.isin(optativas)]) > 4):\n",
+    "            #print(len(user_data[user_data.CODIGO.isin(optativas)]), \" optativas\")\n",
+    "            n_users += 1\n",
+    "            # Precision @ K\n",
+    "            res_p = sum([x[0] in user_data[\"CODIGO\"].unique() for x in sugestoes[:K]])/K\n",
+    "            media_p += res_p\n",
+    "            if maximo_p < res_p:\n",
+    "                maximo_p = res_p\n",
+    "            if minimo_p > res_p:\n",
+    "                minimo_p = res_p\n",
+    "            # Recall @ K\n",
+    "            res_r = sum([x[0] in user_data[\"CODIGO\"].unique() for x in sugestoes[:K]])/len(user_data[user_data.CODIGO.isin(optativas)])\n",
+    "            media_r += res_r\n",
+    "            if maximo_r < res_r:\n",
+    "                maximo_r = res_r\n",
+    "            if minimo_r > res_r:\n",
+    "                minimo_r = res_r\n",
+    "        #else:\n",
+    "            #print(\"Usuario \", user, \" sem dados de optativas\")\n",
+    "            \n",
+    "    print(n_users, \" dados para teste\")\n",
+    "\n",
+    "    print(\"Media Precisão @\", K ,\"= \", media_p/len(dados_test[\"ID_ANONIMO\"].unique()))\n",
+    "    print(\"Maximo Precisão @\", K , \"= \", maximo_p)\n",
+    "    print(\"Minimo Precisão @\", K , \"= \", minimo_p)\n",
+    "\n",
+    "    print(\"Media Recall @\", K ,\"= \", media_r/len(dados_test[\"ID_ANONIMO\"].unique()))\n",
+    "    print(\"Maximo Recall @\", K , \"= \", maximo_r)\n",
+    "    print(\"Minimo Recall @\", K , \"= \", minimo_r)\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "id": "6b41b783",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cache_test = create_cache_user_arrays(pd.concat([dados[\"train\"], dados[\"test\"]]), centralize_cosine = True)"
+    "#cache_test = create_cache_user_arrays(pd.concat([dados[\"train\"], dados[\"test\"]]), centralize_cosine = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
    "id": "4f8f7968",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 89/89 [00:41<00:00,  2.14it/s]"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, True, True, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[True, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n",
-      "[False, False, False, False, False, False, False, False, False, False]\n"
+      "50  dados para teste\n",
+      "Media Precisão @ 20 =  0.058426966292134834\n",
+      "Maximo Precisão @ 20 =  0.25\n",
+      "Minimo Precisão @ 20 =  0.0\n",
+      "Media Recall @ 20 =  0.15878631356159442\n",
+      "Maximo Recall @ 20 =  0.8\n",
+      "Minimo Recall @ 20 =  0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "teste_sugestao(cache = cache_test)"
+    "train, test = train_test_split(dados[\"formados\"][\"ID_ANONIMO\"].unique(), test_size=0.3)\n",
+    "\n",
+    "dados.update(train = dados[\"todos\"].loc[dados[\"todos\"]['ID_ANONIMO'].isin(train)], \n",
+    "             test = dados[\"todos\"].loc[dados[\"todos\"]['ID_ANONIMO'].isin(test)])\n",
+    "\n",
+    "teste_sugestao( K = 20, centralize_cosine=True, reduce_popularity_weight = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "5dd6823e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 89/89 [00:42<00:00,  2.09it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50  dados para teste\n",
+      "Media Precisão @ 20 =  0.01685393258426967\n",
+      "Maximo Precisão @ 20 =  0.1\n",
+      "Minimo Precisão @ 20 =  0.0\n",
+      "Media Recall @ 20 =  0.05002647165568514\n",
+      "Maximo Recall @ 20 =  0.4\n",
+      "Minimo Recall @ 20 =  0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "teste_sugestao( K = 20, centralize_cosine=False, reduce_popularity_weight = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "791319fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 89/89 [00:47<00:00,  1.89it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50  dados para teste\n",
+      "Media Precisão @ 20 =  0.13820224719101126\n",
+      "Maximo Precisão @ 20 =  0.45\n",
+      "Minimo Precisão @ 20 =  0.05\n",
+      "Media Recall @ 20 =  0.36589306448857023\n",
+      "Maximo Recall @ 20 =  1.0\n",
+      "Minimo Recall @ 20 =  0.16666666666666666\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "teste_sugestao( K = 20, centralize_cosine=True, reduce_popularity_weight = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "77498e36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 89/89 [00:48<00:00,  1.84it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50  dados para teste\n",
+      "Media Precisão @ 20 =  0.13820224719101126\n",
+      "Maximo Precisão @ 20 =  0.45\n",
+      "Minimo Precisão @ 20 =  0.05\n",
+      "Media Recall @ 20 =  0.36589306448857023\n",
+      "Maximo Recall @ 20 =  1.0\n",
+      "Minimo Recall @ 20 =  0.16666666666666666\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "teste_sugestao( K = 20, centralize_cosine=False, reduce_popularity_weight = False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dd6823e",
+   "id": "e1b3f2e8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -613,7 +751,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
