inicio da função

--- a/link_prediction/link_prediction_communities.ipynb
+++ b/link_prediction/link_prediction_communities.ipynb
@@ -16099,7 +16099,13 @@
     "    for node in node_subset:\n",
     "        new_g = remove_all_edges_from_node(new_g, node)\n",
     "    \n",
-    "    return new_g\n"
+    "    return new_g\n",
+    "\n",
+    "# Dado um grafo de estudante, remove todas as arestas de todos menos 1 nó de optativa\n",
+    "def maintain_one_opt_node(g):\n",
+    "    # Busca quais são os vértices de disciplinas optativas\n",
+    "    disciplinas = df_844_optativas[\"CODIGO\"].unique()\n",
+    "    nodes_with_edges = [node for node in g.nodes() if g.degree[node] > 0]\n"
    ]
   },
   {
