Inicio do desenvolvimento do pós-processamento

--- a/exploracao_dados/FiltragemColaborativaUsuario_Final.ipynb
+++ b/exploracao_dados/FiltragemColaborativaUsuario_Final.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0a355d5a-e62f-4323-bff1-71d2b5cd2a2b",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8916d696-a698-4c45-9b3b-076c118ddb8c",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f69e3585-de6d-4244-a1cb-d8e40ab15c19",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "42235dd6-f731-42b3-aae0-4e107e481953",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f2ffef73-6873-4d95-9e9a-cdd93ee76286",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5389b7a8-0a31-4fc6-a669-6ec4b3c9c431",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "fa0d5a38-3b8d-4cdc-96b9-974dedad512b",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "cbf86d5f-f0f0-48ee-a09d-a01ade121824",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "ddc3a27e-504b-4bec-8383-019cec78d740",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "efb69a45-3053-49a9-9e38-abce25aa4a13",
    "metadata": {},
    "outputs": [],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "6ae370b4-d243-4de3-b79a-32a69a2ccded",
    "metadata": {},
    "outputs": [],
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "ca5914b7",
    "metadata": {},
    "outputs": [],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "688b9d81",
    "metadata": {
     "scrolled": true
@@ -449,10 +449,13 @@
     }
    ],
    "source": [
-    "i = 1\n",
-    "for item in user_based_suggestions(202266, data_user = dados[\"regulares\"], data_rec = dados[\"formados\"], include_user_interests = True, cache= cache):\n",
-    "    print('Sugestao ' + str(i) + ': ' + item[0] + ', peso: ' + format(item[1], '.2f'))\n",
-    "    i += 1"
+    "\n",
+    "with open('sugestoes.txt', 'w') as file:\n",
+    "    i = 1\n",
+    "    for item in user_based_suggestions(202266, data_user = dados[\"regulares\"], data_rec = dados[\"formados\"], include_user_interests = True, cache= cache):\n",
+    "        print('Sugestao ' + str(i) + ': ' + item[0] + ', peso: ' + format(item[1], '.2f'))\n",
+    "        i += 1\n",
+    "        file.write(f'{item[0]}\\n')"
    ]
   },
   {
@@ -473,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "a75daeda",
    "metadata": {},
    "outputs": [],
@@ -488,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "e118572e",
    "metadata": {},
    "outputs": [],
@@ -558,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "6b41b783",
    "metadata": {},
    "outputs": [],
@@ -568,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "4f8f7968",
    "metadata": {},
    "outputs": [
@@ -611,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "5dd6823e",
    "metadata": {},
    "outputs": [
@@ -650,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "791319fb",
    "metadata": {},
    "outputs": [
@@ -689,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "77498e36",
    "metadata": {},
    "outputs": [
@@ -751,7 +754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
